EXTRA_DIST = \
	SDLMain.h \
	SDLMain.m \
	SDLMain.nib/designable.nib \
	SDLMain.nib/keyedobjects.nib \
	main.cpp \
	pioneer-logo.icns \
	pioneer-logo.png \
	pioneer.xcodeproj/project.pbxproj \
	pioneer.xcodeproj/project.xcworkspace/contents.xcworkspacedata \
	pioneer/en.lproj/Credits.rtf \
	pioneer/en.lproj/InfoPlist.strings \
	pioneer/pioneer-Info.plist \
	pioneer/pioneer-Prefix.pch
